[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Markus Pointner <markus.pointner@mooware.at>"]

[dependencies]
rust-crypto = "^0.2"

[[bin]]
name = "day1"
path = "day1.rs"

[[bin]]
name = "day2"
path = "day2.rs"

[[bin]]
name = "day3"
path = "day3.rs"

[[bin]]
name = "day3_2"
path = "day3_2.rs"

[[bin]]
name = "day4"
path = "day4.rs"

[[bin]]
name = "day5"
path = "day5.rs"
